--- a/src/components/SortingVisualizer/SortingVisualizer.css
+++ b/src/components/SortingVisualizer/SortingVisualizer.css
@@ -1,13 +1,9 @@
-.array-bar {
-  width: 2px;
-  display: inline-block;
-  margin: 0 1px;
-}
-
-.array-container {
-  position: absolute;
-  left: 100px;
-}
-
-.menu {
+body {
+  margin: 0;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
