--- a/src/components/Body/Body.css
+++ b/src/components/Body/Body.css
@@ -1,7 +1,7 @@
 #body-container {
   width: 100%;
   height: 100%;
-  background-color: rgb(230, 230, 230);
+  background-color: #333333;
   text-align: center;
 }
 
